--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Joseph's Website Project
-description: Joseph's Website Project
+description: Here's my EECS 201 website project!
